tests/fixtures/errors/too_many_args.z
# E0300: a positional argument to a function that declares no parameters.
f: function is {}
main: function is {
    f 1
}
